# BuilderBackend

./: .gitignore  .pre-commit-config.yaml  Apartment.py  BuildingFault.py  Config.py  Facade.py  Mission.py  Plan.py  Project.py  Stage.py  Title.py  UnitStage.py  User.py  config_example.ini  db_utils.py  main.py  pyproject.toml
Controllers/: Controller.py  FileSystem.py  ProjectController.py  UserController.py
DTO/: ApartmentDTO.py  BuildingFaultDTO.py  DTO.py  MissionDTO.py  PlanDTO.py  ProjectDTO.py  StageDTO.py  UserDTO.py
Permissions/: ContractorPermission.py  Permissions.py  ProjectManagerPermission.py  UserPermissions.py  WorkManagerPermission.py
Server/: main.py  test_client.py
Tests/: test_Mission.py  test_Project.py  test_Stage.py  test_UserController.py  test_sanity.py
Tests/Acceptance/: acceptance_base.py  config_example.ini  test_permissions.py  test_register.py  test_stage_statuses.py  test_startup.py  test_update_stuff.py
Tests/unit/: test_Mission.py  test_Project.py  test_Stage.py  test_UserController.py  test_sanity.py  test_title.py
Utils/: Exceptions.py  PasswordHasher.py  PermissionType.py  Status.py  Urgency.py
