[tool.poetry]
name = "builderbackend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
bcrypt = "^4.0.1"
flask = "^2.3.2"
requests = "^2.30.0"
django-request = "^1.6.2"
pymongo = "^4.3.3"
flask-session = "^0.5.0"
redis = "^4.5.5"
pytest-mock-resources = "^2.7.0"
pyopenssl = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
